# nova-platform

./: .gitignore  README.md
.github/: dependabot.yml
docs/: 000_PROJECT_CHARTER.md  001_PRODUCT_VISION.md  002_SYSTEM_ARCHITECTURE.md  003_AGENT_RUNTIME.md  004_FEEDBACK_AUTOMATION.md  005_ROADMAP.md  006_SPRINT_0_BACKLOG.md  007_CURSOR_EXECUTION_GUIDE.md  008_CI_CD_GUIDE.md  009_AUTH_API.md  010_ORGANIZATIONS_PROJECTS_API.md  011_DATABASE_ER.md  012_AGENT_MANAGEMENT_API.md  013_PROMPT_MANAGEMENT_API.md  014_PROMPT_VERSIONING.md  015_AGENT_EXECUTION.md  016_CONVERSATION_MEMORY.md  018_KNOWLEDGE_BASE_AND_RAG.md  (+30 more)
services/agent-runtime/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/agent-runtime/src/agent_runtime/: __init__.py  main.py
services/agent-runtime/src/agent_runtime/api/: __init__.py  auth.py  dependencies.py  errors.py  middleware.py  routes.py  schemas.py
services/agent-runtime/src/agent_runtime/application/: __init__.py  container.py  risk.py  services.py
services/agent-runtime/src/agent_runtime/domain/: enums.py  interfaces.py  models.py
services/agent-runtime/src/agent_runtime/infrastructure/: __init__.py  agent_registry.py  event_bus.py  execution_engine.py  knowledge.py  memory.py  metrics.py  model_provider.py  permission_engine.py  planner.py  scheduler.py  tool_gateway.py  workflow_engine.py
services/agent-runtime/src/agent_runtime/shared/: __init__.py  config.py  exceptions.py  logging.py
services/agent-runtime/tests/: conftest.py  test_api.py  test_application.py  test_infrastructure.py
(+1918 files in other folders)
